--- a/deployment/amazon-ec2/playbook.yml
+++ b/deployment/amazon-ec2/playbook.yml
@@ -45,133 +45,7 @@
   become: True
   tasks:
     - include: tasks/expand-xdva.yml
-
 #
-# provision metron on the cluster
+#Build the Metron Cluster
 #
-# TODO - can i simply point to the playbooks under deployment/playbooks?  how to
-# get the equivalent of vars_files: conf/defaults.yml using the existing playbooks ??
-#
-- hosts: ambari_*
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_common
-  tags:
-    - ambari-prereqs
-    - hdp-install
-
-- hosts: ambari_master
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role:  ambari_master
-  tags:
-    - ambari-server
-    - hdp-install
-
-- hosts: ambari_slave
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_slave
-  tags:
-    - ambari-agent
-    - hdp-install
-
-- hosts: ambari_master
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_config
-  tags:
-    - hdp-install
-    - hdp-deploy
-
-- hosts: metron
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: metron_common
-  tags:
-    - metron-prereqs
-
-- hosts: hadoop_client
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_gather_facts
-    - role: hadoop_setup
-  tags:
-    - metron-prereqs
-
-- hosts: search
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  vars:
-    es_hosts: "{% set comma = joiner(',') %}{% for host in groups['search'] -%}{{ comma() }}{{ host }}{%- endfor %}"
-  roles:
-    - role: elasticsearch
-  tags:
-    - elasticsearch
-
-- hosts: mysql
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: mysql_server
-  tags:
-    - mysql-server
-
-- hosts: ambari_slave
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: mysql_client
-  tags:
-    - mysql-client
-
-- hosts: sensors
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_gather_facts
-    - role: flume
-    - role: pycapa
-    - role: bro
-    - role: snort
-    - role: yaf
-    - { role: pcap_replay , when: pcap_replay | default(False)  == True }
-  tags:
-      - sensors
-
-- hosts: enrichment
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_gather_facts
-    - role: metron_streaming
-  tags:
-    - enrichment
-
-- hosts: web
-  become: True
-  vars_files:
-    - conf/defaults.yml
-  roles:
-    - role: ambari_gather_facts
-    - role: metron_ui
-    - role: metron_pcapservice
-  tags:
-    - web
+- include: ../playbooks/metron_full_install.yml
