--- a/deployment/amazon-ec2/tasks/expand-xdva.yml
+++ b/deployment/amazon-ec2/tasks/expand-xdva.yml
@@ -10,8 +10,8 @@
 #  limitations under the License.
 #
 ---
-- name: Expand xvda on {{ inventory_hostname }}
-#          sectors  delete 1  new      primary  first    past mbr    to end    bootable         write and exit
+- name: Expand xvda
+#          sectors  delete 1  new      primary  first    past mbr to end  bootable     write and exit
   shell: "(echo u s; echo d 1; echo n; echo p; echo 1; echo 2048 ; echo ;echo a; echo 1; echo w) | fdisk /dev/xvda || true"
   args:
     executable: /bin/bash
@@ -25,6 +25,5 @@
 - name: waiting for hosts to come back
   local_action: wait_for host={{ inventory_hostname }}
                 state=started
-  sudo: false
-
+  become: false
 
