--- a/deployment/roles/ambari_master/tasks/main.yml
+++ b/deployment/roles/ambari_master/tasks/main.yml
@@ -17,7 +17,7 @@
 ---
 # tasks file for ambari_master
 - name: Install ambari repo
-  yum: name=ambari-server state=present
+  yum: name=ambari-server state=present update_cache=true
 
 - name: Setup ambari server
   shell: ambari-server setup -s; touch /etc/ambari-server/configured creates=/etc/ambari-server/configured
