METRON-1272 Hide child alerts from searches and grouping if they belong to meta alerts (justinleet via nickwallen) closes apache/metron#811

--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/bro_index.template
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/bro_index.template
@@ -154,6 +154,10 @@
         "alert": {
           "type": "nested"
         },
+        "metaalerts": {
+          "type": "string",
+          "index": "not_analyzed"
+        },
         "ip_src_addr": {
           "type": "ip"
         },
