--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/error_index.template
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/error_index.template
@@ -53,6 +53,10 @@
         },
         "alert": {
           "type": "nested"
+        },
+        "metaalerts": {
+          "type": "string",
+          "index": "not_analyzed"
         }
       }
     }
