--- a/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/yaf_index.template
+++ b/metron-deployment/packaging/ambari/metron-mpack/src/main/resources/common-services/METRON/CURRENT/package/files/yaf_index.template
@@ -228,6 +228,10 @@
         },
         "alert": {
           "type": "nested"
+        },
+        "metaalerts": {
+          "type": "string",
+          "index": "not_analyzed"
         }
       }
     }
