--- a/metron-deployment/roles/epel/tasks/main.yml
+++ b/metron-deployment/roles/epel/tasks/main.yml
@@ -15,16 +15,7 @@
 #  limitations under the License.
 #
 ---
-- name: Get epel-repo rpm
-  get_url:
-    dest: /tmp/epel-release.rpm
-    url: http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
+- name: Install EPEL repository
+  yum: name=epel-release update_cache=yes
 
-- name: Install epel-repo rpm
-  yum:
-    pkg: /tmp/epel-release.rpm
-    state: installed
-  register: result
-  until: result.rc == 0
-  retries: 5
-  delay: 10
+
