--- a/metron-analytics/metron-profiler/src/main/config/profiler.properties
+++ b/metron-analytics/metron-profiler/src/main/config/profiler.properties
@@ -38,6 +38,8 @@ profiler.hbase.table=profiler
 profiler.hbase.column.family=P
 profiler.hbase.batch=10
 profiler.hbase.flush.interval.seconds=30
+profiler.event.time.lag=1
+profiler.event.time.lag.units=MINUTES
 
 ##### Kafka #####
 
