Added limit for max number of routes that a distributor maintains.

--- a/metron-analytics/metron-profiler/src/main/config/profiler.properties
+++ b/metron-analytics/metron-profiler/src/main/config/profiler.properties
@@ -22,6 +22,8 @@
 
 topology.worker.childopts=
 topology.auto-credentials=
+profiler.workers=1
+profiler.executors=0
 
 ##### Profiler #####
 
@@ -29,17 +31,19 @@ profiler.input.topic=indexing
 profiler.output.topic=enrichments
 profiler.period.duration=15
 profiler.period.duration.units=MINUTES
-profiler.workers=1
-profiler.executors=0
 profiler.ttl=30
 profiler.ttl.units=MINUTES
+profiler.event.time.lag=1
+profiler.event.time.lag.units=MINUTES
+profiler.max.routes.per.bolt=10000
+
+##### HBase #####
+
 profiler.hbase.salt.divisor=1000
 profiler.hbase.table=profiler
 profiler.hbase.column.family=P
 profiler.hbase.batch=10
 profiler.hbase.flush.interval.seconds=30
-profiler.event.time.lag=1
-profiler.event.time.lag.units=MINUTES
 
 ##### Kafka #####
 
