Setting topology.max.spout.pending to something at least

--- a/metron-analytics/metron-profiler/src/main/config/profiler.properties
+++ b/metron-analytics/metron-profiler/src/main/config/profiler.properties
@@ -25,7 +25,7 @@ topology.auto-credentials=
 profiler.workers=1
 profiler.executors=0
 topology.message.timeout.secs=30
-topology.max.spout.pending=
+topology.max.spout.pending=100000
 
 ##### Profiler #####
 
