--- a/metron-analytics/metron-profiler/src/main/flux/profiler/remote.yaml
+++ b/metron-analytics/metron-profiler/src/main/flux/profiler/remote.yaml
@@ -118,8 +118,8 @@ components:
     -   id: "windowDuration"
         className: "org.apache.storm.topology.base.BaseWindowedBolt$Duration"
         constructorArgs:
-            - ${profiler.period.duration}
-            - "${profiler.period.duration.units}"
+            - ${profiler.window.duration}
+            - "${profiler.window.duration.units}"
 
     -   id: "eventTimeLag"
         className: "org.apache.storm.topology.base.BaseWindowedBolt$Duration"
