Changed name to profiler.window.lag

--- a/metron-analytics/metron-profiler/src/main/flux/profiler/remote.yaml
+++ b/metron-analytics/metron-profiler/src/main/flux/profiler/remote.yaml
@@ -124,8 +124,8 @@ components:
     -   id: "eventTimeLag"
         className: "org.apache.storm.topology.base.BaseWindowedBolt$Duration"
         constructorArgs:
-            - ${profiler.event.time.lag}
-            - "${profiler.event.time.lag.units}"
+            - ${profiler.window.lag}
+            - "${profiler.window.lag.units}"
 
 spouts:
 
