--- a/metron-analytics/metron-profiler/src/test/resources/log4j.properties
+++ b/metron-analytics/metron-profiler/src/test/resources/log4j.properties
@@ -21,6 +21,8 @@
 # Root logger option
 log4j.rootLogger=ERROR, stdout
 
+log4j.logger.org.apache.metron.profiler=DEBUG
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
