--- a/metron-analytics/metron-profiler/src/test/resources/log4j.properties
+++ b/metron-analytics/metron-profiler/src/test/resources/log4j.properties
@@ -22,6 +22,7 @@
 log4j.rootLogger=ERROR, stdout
 
 log4j.logger.org.apache.metron.profiler=DEBUG
+log4j.logger.org.apache.storm.windowing=ALL
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
