--- a/metron-platform/metron-storm-core-override/pom.xml
+++ b/metron-platform/metron-storm-core-override/pom.xml
@@ -20,8 +20,8 @@
         <artifactId>metron-platform</artifactId>
         <version>0.4.3</version>
     </parent>
-    <artifactId>metron-storm-override</artifactId>
-    <name>metron-storm-override</name>
+    <artifactId>metron-storm-core-override</artifactId>
+    <name>metron-storm-core-override</name>
     <description>Backported components of Apache Storm Core</description>
     <url>https://metron.apache.org/</url>
     <properties>
