--- a/metron-platform/metron-storm-kafka-override/pom.xml
+++ b/metron-platform/metron-storm-kafka-override/pom.xml
@@ -42,8 +42,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.storm</groupId>
-            <artifactId>storm-core</artifactId>
-            <version>${global_storm_version}</version>
+            <artifactId>metron-storm-core-override</artifactId>
+            <version>${project.parent.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
