--- a/metron-platform/metron-elasticsearch/src/test/resources/log4j.properties
+++ b/metron-platform/metron-elasticsearch/src/test/resources/log4j.properties
@@ -17,6 +17,8 @@
 # Root logger option
 log4j.rootLogger=ERROR, stdout
 
+log4j.logger.org.apache.metron.elasticsearch=ALL
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
