--- a/metron-platform/elasticsearch-shaded/src/main/resources/META-INF/log4j-provider.properties
+++ b/metron-platform/elasticsearch-shaded/src/main/resources/META-INF/log4j-provider.properties
@@ -13,6 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-LoggerContextFactory = org.apache.metron.logging.log4j.core.impl.Log4jContextFactory
-Log4jAPIVersion = 2.6.0
-FactoryPriority= 10
+#LoggerContextFactory = org.apache.metron.logging.log4j.core.impl.Log4jContextFactory
+#Log4jAPIVersion = 2.6.0
+#FactoryPriority= 10
