--- a/metron-platform/metron-elasticsearch/src/main/config/elasticsearch.properties
+++ b/metron-platform/metron-elasticsearch/src/main/config/elasticsearch.properties
@@ -34,6 +34,7 @@ indexing.error.topic=indexing
 
 ##### Indexing #####
 indexing.writer.class.name=org.apache.metron.elasticsearch.writer.ElasticsearchWriter
+indexing.writer.elasticsearch.fieldNameConverter=
 
 ##### HDFS #####
 bolt.hdfs.rotation.policy=org.apache.storm.hdfs.bolt.rotation.TimedRotationPolicy
