--- a/metron-platform/metron-elasticsearch/src/test/resources/log4j2.properties
+++ b/metron-platform/metron-elasticsearch/src/test/resources/log4j2.properties
@@ -14,11 +14,10 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-# Root logger option
-log4j.rootLogger=ERROR, stdout
 
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{DATE} %-5p %c{1}:%L - %m%n
+appender.console.type = Console
+appender.console.name = console
+appender.console.layout.type = PatternLayout
+
+rootLogger.level = debug
+rootLogger.appenderRef.console.ref = console
