--- a/pom.xml
+++ b/pom.xml
@@ -136,20 +136,20 @@
         </profile>
     </profiles>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>${global_mockito_version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.storm</groupId>
-                <artifactId>storm-kafka</artifactId>
-                <version>${global_storm_version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <!--<dependencyManagement>-->
+        <!--<dependencies>-->
+            <!--<dependency>-->
+                <!--<groupId>org.mockito</groupId>-->
+                <!--<artifactId>mockito-core</artifactId>-->
+                <!--<version>${global_mockito_version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.apache.storm</groupId>-->
+                <!--<artifactId>storm-kafka</artifactId>-->
+                <!--<version>${global_storm_version}</version>-->
+            <!--</dependency>-->
+        <!--</dependencies>-->
+    <!--</dependencyManagement>-->
     <build>
         <pluginManagement>
             <plugins>
@@ -235,26 +235,26 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <compilerId>javac-with-errorprone</compilerId>
+                    <!--<compilerId>javac-with-errorprone</compilerId>-->
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <source>${global_java_version}</source>
-                    <compilerArgument>-Xlint:unchecked</compilerArgument>
+                    <!--<compilerArgument>-Xlint:unchecked</compilerArgument>-->
                     <target>${global_java_version}</target>
-                    <showWarnings>true</showWarnings>
+                    <!--<showWarnings>true</showWarnings>-->
                 </configuration>
                 <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                        <version>2.8</version>
-                    </dependency>
-                    <!-- override plexus-compiler-javac-errorprone's dependency on
-                         Error Prone with the latest version -->
-                    <dependency>
-                        <groupId>com.google.errorprone</groupId>
-                        <artifactId>error_prone_core</artifactId>
-                        <version>${global_errorprone_core_version}</version>
-                    </dependency>
+                    <!--<dependency>-->
+                        <!--<groupId>org.codehaus.plexus</groupId>-->
+                        <!--<artifactId>plexus-compiler-javac-errorprone</artifactId>-->
+                        <!--<version>2.8</version>-->
+                    <!--</dependency>-->
+                    <!--&lt;!&ndash; override plexus-compiler-javac-errorprone's dependency on-->
+                         <!--Error Prone with the latest version &ndash;&gt;-->
+                    <!--<dependency>-->
+                        <!--<groupId>com.google.errorprone</groupId>-->
+                        <!--<artifactId>error_prone_core</artifactId>-->
+                        <!--<version>${global_errorprone_core_version}</version>-->
+                    <!--</dependency>-->
                 </dependencies>
             </plugin>
             <plugin>
